--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,11 +1,11 @@
-#Fri Aug 21 11:48:58 JST 2015
+#Wed Aug 26 15:43:05 JST 2015
 eclipse.preferences.version=1
+encoding//jquery/jquery.html=UTF-8
 encoding/<project>=UTF-8
 encoding/changePassword.html=UTF-8
 encoding/error.html=UTF-8
 encoding/form.html=UTF-8
 encoding/insertUser.html=UTF-8
-encoding/jquery.html=UTF-8
 encoding/login.html=UTF-8
 encoding/newfile.php=UTF-8
 encoding/ovarallWarkTime.html=UTF-8
