--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,15 +1,15 @@
-#Wed Aug 26 15:43:05 JST 2015
+#Fri Aug 28 17:54:30 JST 2015
 eclipse.preferences.version=1
+encoding//html/changePassword.html=UTF-8
+encoding//html/error.html=UTF-8
+encoding//html/form.html=UTF-8
+encoding//html/insertUser.html=UTF-8
+encoding//html/login.html=UTF-8
+encoding//html/newfile.php=UTF-8
+encoding//html/ovarallWarkTime.html=UTF-8
+encoding//html/personalWorkTime.html=UTF-8
+encoding//html/settingHoliday.html=UTF-8
+encoding//html/settingRestTime.html=UTF-8
+encoding//html/updateUser.html=UTF-8
 encoding//jquery/jquery.html=UTF-8
 encoding/<project>=UTF-8
-encoding/changePassword.html=UTF-8
-encoding/error.html=UTF-8
-encoding/form.html=UTF-8
-encoding/insertUser.html=UTF-8
-encoding/login.html=UTF-8
-encoding/newfile.php=UTF-8
-encoding/ovarallWarkTime.html=UTF-8
-encoding/personalWorkTime.html=UTF-8
-encoding/settingHoliday.html=UTF-8
-encoding/settingRestTime.html=UTF-8
-encoding/updateUser.html=UTF-8
