--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Fri Aug 28 17:54:30 JST 2015
+#Wed Sep 09 16:11:15 JST 2015
 eclipse.preferences.version=1
 encoding//html/changePassword.html=UTF-8
 encoding//html/error.html=UTF-8
@@ -12,4 +12,7 @@ encoding//html/settingHoliday.html=UTF-8
 encoding//html/settingRestTime.html=UTF-8
 encoding//html/updateUser.html=UTF-8
 encoding//jquery/jquery.html=UTF-8
+encoding//mainMenu/mainMenu.phtml=UTF-8
+encoding//script/logout.js=UTF-8
+encoding//script/mainMenu-dialog.js=UTF-8
 encoding/<project>=UTF-8
